@@ -241,6 +241,17 @@ km_test.txt = get_kernel_matrix
 %init_kernel TEST
 %km_test.txt = get_kernel_matrix
 
+% Oligo String
+print Oligo
+set_kernel OLIGO CHAR 10 3 1.2
+
+set_features TRAIN ../data/fm_train_dna.dat DNA
+init_kernel TRAIN
+km_train.txt = get_kernel_matrix
+
+set_features TEST ../data/fm_test_dna.dat DNA
+init_kernel TEST
+km_test.txt = get_kernel_matrix
 
 % Poly Match String
 print PolyMatchString
