@@ -140,7 +140,7 @@ enum EKernelType
 	K_UNKNOWN = 0,
 	K_LINEAR = 10,
 	K_SPARSELINEAR = 11,
-	K_POLY	= 20,
+	K_POLY = 20,
 	K_GAUSSIAN = 30,
 	K_SPARSEGAUSSIAN = 31,
 	K_GAUSSIANSHIFT = 32,
@@ -165,8 +165,9 @@ enum EKernelType
 	K_CONST = 200,
 	K_MINDYGRAM = 210,
 	K_DISTANCE = 220,
-	K_LOCALALIGNMENT= 230,
-	K_PYRAMIDCHI2= 240,
+	K_LOCALALIGNMENT = 230,
+	K_PYRAMIDCHI2 = 240,
+	K_OLIGO = 250
 };
 
 enum EClassifierType
